GNOME Bugzilla – Bug 724937
Fix the window icon
Last modified: 2014-07-18 16:30:59 UTC
Screenshots taken with the app menu in fallback mode forthcoming.
Created attachment 269969 [details] [review] Fix the window icon The window icon should match the icon specified in the desktop file.
Created attachment 269970 [details] Screenshot using preferences-desktop icon (incorrect)
Created attachment 269971 [details] Screenshot using preferences-system icon (correct)