shell: Use correct window icon

The window icon should match the icon specified in the desktop file.

https://bugzilla.gnome.org/show_bug.cgi?id=724937